// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ingress generator should generate a single path if connect port is not supplied 1`] = `
"---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-ingress
  annotations:
    ingress.kubernetes.io/auth-url: http://datalab-auth-service.test.svc.cluster.local/auth
    ingress.kubernetes.io/auth-signin: https://testlab.test-datalabs.nerc.ac.uk
spec:
  rules:
  - host: testlab-name.test-datalabs.nerc.ac.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: name-service
          servicePort: 80
"
`;

exports[`Ingress generator should generate multiple paths if connect port is supplied 1`] = `
"---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-ingress
  annotations:
    ingress.kubernetes.io/auth-url: http://datalab-auth-service.test.svc.cluster.local/auth
    ingress.kubernetes.io/auth-signin: https://testlab.test-datalabs.nerc.ac.uk
spec:
  rules:
  - host: testlab-name.test-datalabs.nerc.ac.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: name-service
          servicePort: 80
      - path: /connect
        backend:
          serviceName: name-service
          servicePort: 8000
"
`;
